attempts at css and image gallery creation

--- a/crabdraws.html
+++ b/crabdraws.html
@@ -24,14 +24,13 @@
   <body>
 
     <div class="container">
-      <div id="demobox4"></div>
-
-      <img src="file:///Users/harrietMac/Desktop/Coding_Course/group_project/images/artycrabcrop.jpg" class="img-fluid" alt="Responsive image" align="left">
+      <div id="demobox5"></div>
+      <img src="images/artycrabcrop.jpg" class="img-fluid header-image" alt="Responsive image">
       <div class="text-block">
           <h3>I Draw Too</h3>
       </div>
     </div>
-<img src="file:///Users/harrietMac/Desktop/Coding_Course/group_project/images/crabdrawingcrab.jpg">
+
     <div>
       <p>As I an immensely caring, talented, (and modest) crab, I am most alturistic when it comes to taking the time to give back to my fellow critters, and thanks to my do-good-ing nature, I have pooled my creativity into a series of paintings which will be sold in aid of animals more endangered than myself.
         (Although, that being said, a crab of my calibre is very rare to find, one might say I am the most endangered on the list...)</p>
@@ -44,114 +43,115 @@
     </div>
     <br>
 
-
 <div class="contrast">
+    <section class="p-0" id="portfolio">
+        <div class="container-fluid p-0">
+          <div class="row no-gutters popup-gallery">
+            <div class="col-lg-4 col-sm-6">
+              <a class="portfolio-box" href="imgages/orang.jpg">
+                  <img class="img-fluid" src="images/orang.jpg" alt="">
+                  <div class="portfolio-box-caption">
+                    <div class="portfolio-box-caption-content">
+                      <div class="project-category text-faded">
+                        This Orangutan is an Orphan
+                      </div>
+                      <div class="project-name">
+                        How cute is this
+                      </div>
+                    </div>
+                  </div>
+                </a>
+            </div>
+            <div class="col-lg-4 col-sm-6">
+              <a class="portfolio-box" href="images/orang2.jpg">
+                  <img class="img-fluid" src="images/orang2.jpg" alt="">
+                  <div class="portfolio-box-caption">
+                    <div class="portfolio-box-caption-content">
+                      <div class="project-category text-faded">
+                        Fuck yeah I'm an Orangutang
+                      </div>
+                      <div class="project-name">
+                        This one is from Borneo as well innit
+                      </div>
+                    </div>
+                  </div>
+                </a>
+            </div>
+            <div class="col-lg-4 col-sm-6">
+              <a class="portfolio-box" href="images/giraffe1.jpg">
+                  <img class="img-fluid" src="images/giraffe1.jpg" alt="">
+                  <div class="portfolio-box-caption">
+                    <div class="portfolio-box-caption-content">
+                      <div class="project-category text-faded">
+                        Giraffe
+                      </div>
+                      <div class="project-name">
+                        Acrylic on Paper 2019
+                      </div>
+                    </div>
+                  </div>
+                </a>
+            </div>
+            <div class="col-lg-4 col-sm-6">
+              <a class="portfolio-box" href="images/giraffe2.jpg">
+                  <img class="img-fluid" src="images/giraffe2.jpg" alt="">
+                  <div class="portfolio-box-caption">
+                    <div class="portfolio-box-caption-content">
+                      <div class="project-category text-faded">
+                        Fuck Yeah I drewed another one
+                      </div>
+                      <div class="project-name">
+                        Girraffe
+                      </div>
+                    </div>
+                  </div>
+                </a>
+            </div>
+            <div class="col-lg-4 col-sm-6">
+              <a class="portfolio-box" href="images/crabdrawingcrab.jpg">
+                  <img class="img-fluid" src="images/crabdrawingcrab.jpg" alt="">
+                  <div class="portfolio-box-caption">
+                    <div class="portfolio-box-caption-content">
+                      <div class="project-category text-faded">
+                        Call me Van Gogh
+                      </div>
+                      <div class="project-name">
+                        * I am not included in the price *
+                      </div>
+                    </div>
+                  </div>
+                </a>
+            </div>
+            <div class="col-lg-4 col-sm-6">
+              <a class="portfolio-box" href="images/chimpsquare.jpg">
+                  <img class="img-fluid" src="images/chimpsquare.jpg" alt="">
+                  <div class="portfolio-box-caption">
+                    <div class="portfolio-box-caption-content">
+                      <div class="project-category text-faded">
+                        A chimp I met in Kenya
+                      </div>
+                      <div class="project-name">
+                        Acrylic on Paper, 2018
+                      </div>
+                    </div>
+                  </div>
+                </a>
+            </div>
 
-  <div class="responsive">
-    <div class="gallery">
-      <a target="_blank" href="images/orang.jpg">
-        <img src="images/orang.jpg" alt="Orangutang" max-width="600px">
-      </a>
-      <div class="desc">'Mumui' (2019)</div>
-    </div>
-  </div>
 
-  <div class="responsive">
-    <div class="gallery">
-      <a target="_blank" href="images/orang2.jpg">
-        <img src="images/orang2.jpg" alt="orangutang2" max-width="600px">
-      </a>
-      <div class="desc">'Jenki' (2019)</div>
-    </div>
-  </div>
 
-  <div class="responsive">
-    <div class="gallery">
-      <a target="_blank" href="images/giraffe1.jpg">
-        <img src="images/giraffe1.jpg" alt="giraffe1" max-width="600px">
-      </a>
-      <div class="desc">Giraffe 1 (2018)</div>
-    </div>
-
-    <div class="responsive">
-      <div class="gallery">
-        <a target="_blank" href="images/giraffe2.jpg">
-          <img src="images/giraffe2.jpg" alt="giraffe2" max-width="600px">
-        </a>
-        <div class="desc">Giraffe2</div>
-      </div>
-  </div>
-
-  <div class="clearfix"></div>
-
-  <div style="padding:0px;">
-    </div>
-<div class="row">
-    <div class="col-md-12">
-      <div id="mdb-lightbox-ui"></div>
-
-          <div class="mdb-lightbox no-margin">
-
-            <figure class="col-md-4">
-              <a href="images/orang.jpg" data-size="1600x1067">
-                <img alt="picture" src="images/orang.jpg"
-                  class="img-fluid">
-              </a>
-            </figure>
-
-            <figure class="col-md-4">
-              <a href="images/orang2.jpg" data-size="1600x1067">
-                <img alt="picture" src="images/orang2.jpg"
-                  class="img-fluid" />
-              </a>
-            </figure>
-
-            <figure class="col-md-4">
-              <a href="images/giraffe1.jpg" data-size="1600x1067">
-                <img alt="picture" src="images/giraffe1.jpg"
-                  class="img-fluid" />
-              </a>
-            </figure>
-
-            <figure class="col-md-4">
-              <a href="images/giraffe2.jpg" data-size="1600x1067">
-                <img alt="picture" src="images/giraffe2.jpg"
-                  class="img-fluid" />
-              </a>
-            </figure>
+        <form>
+          <div class="form-group">
+            <label for="exampleFormControlInput1">Email address</label>
+            <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
           </div>
-        </div>
-
-
-
-    <div class="form-popup" id="myForm">
-      <form action="/action_page.php" class="form-container">
-        <h1>Say Hi!</h1>
-
-          <label for="email"><b>Email</b></label>
-          <input type="text" placeholder="Enter Email" name="email" required>
-
-          <label for="psw"><b>Password</b></label>
-          <input type="password" placeholder="Enter Password" name="psw" required>
-
-          <button type="submit" class="btn">Login</button>
-          <button type="submit" class="btn cancel" onclick="closeForm()">Close</button>
+          <div class="form-group">
+            <label for="exampleFormControlTextarea1">What you sayin</label>
+            <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+          </div>
         </form>
-      </div>
 
-    <label for="fname">First Name</label>
-    <input type="text" id="fname" name="firstname" placeholder="Your name..">
 
-    <label for="lname">Last Name</label>
-    <input type="text" id="lname" name="lastname" placeholder="Your last name..">
-
-    <label for="subject">Subject</label>
-    <textarea id="subject" name="subject" placeholder="Write something.." style="height:200px"></textarea>
-
-    <input type="submit" value="Submit">
-
-  </form>
-</div>
 </div>
 
 </html>
