--- a/crabwears.html
+++ b/crabwears.html
@@ -8,6 +8,7 @@
     <title>Crab Wears</title>
   </head>
   <body>
+    <div class="contrast">
     <h1>I love a bit of red</h1>
 
 <img src="images/Screen%20Shot%202019-04-02%20at%2019.15.32.jpg" style="width:600px;height:600px;">
@@ -29,7 +30,9 @@ Just chilling in #mycalveins
 <img src="images/filacrab%202.jpg" style=image>
 Fila is your cue if you want to get waAvVyYY.
 <br>
-  <div class="col-2"></div>
+  <div class="col-2">
+  </div>
+</div>
 
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
