--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         <div class="carousel-item">
           <img src="images/crabinlove%202.jpg" class="img-fluid d-block w-100" alt="lover">
         </div>
-          <div class="centered">I am Crab</div>I
+          <div class="centered">I am Crab</div>
       </div>
     </div>
     <br>
@@ -96,7 +96,7 @@
       <h2> Who Am I?</h2>
       <div class="container">
         <div id="demobox4"></div>
-      <img src="file:///Users/harrietMac/Desktop/Coding_Course/group_project/images/wokeuplikethiscrab.jpg" class="image-fluid">
+      <img src="file:///Users/harrietMac/Desktop/Coding_Course/group_project/images/wokeuplikethiscrab.jpg" class="image-fluid header-image">
 
     <p>Some may call me a guru, some may call me a gal. But really I'm just a crab, a London-based crustacean brought to you from the shores of Scarborough Seaworld to provide life hacks to all you lovely lucky people. Positively influencing since '97, this website is a platform where I can share my recommendations, all drawn from my very busy and important life.<p/>
     <br>
