making column in index

--- a/crabdraws.html
+++ b/crabdraws.html
@@ -25,7 +25,7 @@
 
     <div class="container">
       <div id="demobox5"></div>
-      <img src="images/artycrabcrop.jpg" class="img-fluid header-image" alt="Responsive image">
+      <img src="images/artycrabcrop.jpg" class="img-fluid" alt="Responsive image">
       <div class="text-block">
           <h3>I Draw Too</h3>
       </div>
