--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
 
   <body>
 
+        <!-- Navbar still need to add color and spacing utiltiy clasess to css-->
+
       <div class="contrast">
         <nav class="navbar sticky-top navbar-light bg-light">
           <a class="navbar-brand" href="#">
@@ -46,11 +48,6 @@
      </div>
    </nav>
 </div>
-
-    <!-- Navbar still need to add color and spacing utiltiy clasess to css-->
-
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
 <section id=carousel>
   <div class="text-overlay">
     <div id="indexcarousel" class="carousel slide" data-ride="carousel">
@@ -59,7 +56,7 @@
             <img src="images/naturalhabitat%202.jpg" class="img-fluid d-block w-100" alt="crab in natural habitat">
         </div>
       <div class="carousel-item">
-          <img src="images/angelcrab.jpg" class="img-fluid d-block w-100" alt="angel cap crab">
+          <img src="images/angelcrabcopy.jpg" class="img-fluid d-block w-100" alt="angel cap crab">
         </div>
         <div class="carousel-item">
           <img src="images/hidenseekcrab.jpg" class="img-fluid d-block w-100" alt="hide and seek crab">
@@ -67,7 +64,7 @@
         <div class="carousel-item">
           <img src="images/crabinlove%202.jpg" class="img-fluid d-block w-100" alt="lover">
         </div>
-          <div class="centered">just_crab</div>I
+          <div class="centered">just_crab</div>
       </div>
     </div>
   </div>
@@ -75,23 +72,28 @@
   </section>
 
 <section id=Crab...>
-  <div class="contrast">
-      <h2> Who Am I?</h2>
-      <div class="container">
-        <div id="demobox4"></div>
-      <img src="file:///Users/harrietMac/Desktop/Coding_Course/group_project/images/wokeuplikethiscrab.jpg" class="image-fluid header-image">
 
-    <p>Some may call me a guru, some may call me a gal. But really I'm just a crab, a London-based crustacean brought to you from the shores of Scarborough Seaworld to provide life hacks to all you lovely lucky people. Positively influencing since '97, this website is a platform where I can share my recommendations, all drawn from my very busy and important life.<p/>
-    <br>
-
-
-<p2>
-      I woke up like this
-      </p2>
-
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-7">
+          <div id="demobox4"></div>
+            <h2> Who Am I?</h2>
+              <img src="file:///Users/harrietMac/Desktop/Coding_Course/group_project/images/wokeuplikethiscrab.jpg" class="image-fluid">
+            </div>
+            <div class="col-5">
+              <p>Some may call me a guru, some may call me a gal. But really I'm just a crab, a London-based crustacean brought to you from the shores of Scarborough Seaworld to provide life hacks to all you lovely lucky people. Positively influencing since '97, this website is a platform where I can share my recommendations, all drawn from my very busy and important life.<p/>
+          </div>
+        </div>
 
 
 
+
+
+
+
+  <br>
+
+<div class="contrast">
 <div class="vl"></div>
 <br>
 <br>
@@ -105,6 +107,8 @@
 </div>
 </section>
 
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
 <script type="text/javascript">window.PixleeAsyncInit = function() {Pixlee.init({apiKey:'OJdmiQCo9vY6u1yHlcl9'});Pixlee.addSimpleWidget({widgetId:'17151'});};</script>
 <script src="https://instafeed.assets.pixlee.com/assets/pixlee_widget_1_0_0.js"></script>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
