--- a/index.html
+++ b/index.html
@@ -17,40 +17,40 @@
   </head>
 
   <body>
+<!-- Navbar still need to add color and spacing utiltiy clasess to css-->
 
-      <div class="contrast">
-        <nav class="navbar sticky-top navbar-light bg-light">
-          <a class="navbar-brand" href="#">
-            <img src="/images/chimp.jpg" width="30" height="30" alt="crab icon">
-          </a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <a class="navbar-brand" href="index.html"><img src="images/giraffe1.jpg" height="30" width ="30"></a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
 
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-       <ul class="navbar-nav mr-auto">
-         <li class="nav-item active">
-           <a class="nav-link" href="#Crab...">Crab...<span class="sr-only">(current)</span></a>
-         </li>
-         <li class="nav-item">
-           <a class="nav-link" href="crabwears.html">Wears</a>
-         </li>
-         <li class="nav-item">
-           <a class="nav-link" href="crabdraws.html">Draws</a>
-         </li>
-         <li class="nav-item">
-           <a class="nav-link" href="crabrecommends.html">Recommends</a>
-         </li>
-       </ul>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
 
-     </div>
-   </nav>
-</div>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item active">
+          <a class="nav-link" href="#Crab...">Crab...<span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="crabwears.html">Wears</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="crabdraws.html">Draws</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="crabrecommends.html">Recommends</a>
+        </li>
+      </ul>
+    </div>
+</nav>
 
-    <!-- Navbar still need to add color and spacing utiltiy clasess to css-->
 
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+
+
+
 <section id=carousel>
   <div class="text-overlay">
     <div id="indexcarousel" class="carousel slide" data-ride="carousel">
@@ -67,7 +67,7 @@
         <div class="carousel-item">
           <img src="images/crabinlove%202.jpg" class="img-fluid d-block w-100" alt="lover">
         </div>
-          <div class="centered">just_crab</div>I
+          <div class="centered">just_crab</div>
       </div>
     </div>
   </div>
@@ -105,6 +105,8 @@
 </div>
 </section>
 
+<!-- Optional JavaScript -->
+<!-- jQuery first, then Popper.js, then Bootstrap JS -->
 <script type="text/javascript">window.PixleeAsyncInit = function() {Pixlee.init({apiKey:'OJdmiQCo9vY6u1yHlcl9'});Pixlee.addSimpleWidget({widgetId:'17151'});};</script>
 <script src="https://instafeed.assets.pixlee.com/assets/pixlee_widget_1_0_0.js"></script>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
