--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <!-- Navbar still need to add color and spacing utiltiy clasess to css-->
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="index.html"><img src="images/giraffe1.jpg" height="30" width ="30"></a>
+  <a class="navbar-brand" href="index.html"><img src="images/claw.png" height="30" width ="30"></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -48,9 +48,6 @@
 </nav>
 
 
-
-
-
 <section id=carousel>
   <div class="text-overlay">
     <div id="indexcarousel" class="carousel slide" data-ride="carousel">
@@ -59,7 +56,7 @@
             <img src="images/naturalhabitat%202.jpg" class="img-fluid d-block w-100" alt="crab in natural habitat">
         </div>
       <div class="carousel-item">
-          <img src="images/angelcrab.jpg" class="img-fluid d-block w-100" alt="angel cap crab">
+          <img src="images/angelcrabcopy.jpg" class="img-fluid d-block w-100" alt="angel cap crab">
         </div>
         <div class="carousel-item">
           <img src="images/hidenseekcrab.jpg" class="img-fluid d-block w-100" alt="hide and seek crab">
@@ -75,23 +72,19 @@
   </section>
 
 <section id=Crab...>
-  <div class="contrast">
-      <h2> Who Am I?</h2>
-      <div class="container">
-        <div id="demobox4"></div>
-      <img src="file:///Users/harrietMac/Desktop/Coding_Course/group_project/images/wokeuplikethiscrab.jpg" class="image-fluid header-image">
-
-    <p>Some may call me a guru, some may call me a gal. But really I'm just a crab, a London-based crustacean brought to you from the shores of Scarborough Seaworld to provide life hacks to all you lovely lucky people. Positively influencing since '97, this website is a platform where I can share my recommendations, all drawn from my very busy and important life.<p/>
-    <br>
-
-
-<p2>
-      I woke up like this
-      </p2>
-
-
-
-
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-7">
+          <div id="demobox4"></div>
+            <h2> Who Am I?</h2>
+              <img src="file:///Users/harrietMac/Desktop/Coding_Course/group_project/images/wokeuplikethiscrab.jpg" class="image-fluid">
+            </div>
+            <div class="col-5">
+              <p>Some may call me a guru, some may call me a gal. But really I'm just a crab, a London-based crustacean brought to you from the shores of Scarborough Seaworld to provide life hacks to all you lovely lucky people. Positively influencing since '97, this website is a platform where I can share my recommendations, all drawn from my very busy and important life.<p/>
+          </div>
+        </div>
+  <br>
+<div class="contrast">
 <div class="vl"></div>
 <br>
 <br>
@@ -100,13 +93,13 @@
 <br>
 <br>
 <h1>Doing the Gram for the Fans</h1>
-
 <div id="pixlee_container">
 </div>
 </section>
 
-<!-- Optional JavaScript -->
-<!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+
 <script type="text/javascript">window.PixleeAsyncInit = function() {Pixlee.init({apiKey:'OJdmiQCo9vY6u1yHlcl9'});Pixlee.addSimpleWidget({widgetId:'17151'});};</script>
 <script src="https://instafeed.assets.pixlee.com/assets/pixlee_widget_1_0_0.js"></script>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
