--- a/index.html
+++ b/index.html
@@ -61,9 +61,6 @@
         <div class="carousel-item">
           <img src="images/hidenseekcrab.jpg" class="img-fluid d-block w-100" alt="hide and seek crab">
         </div>
-        <div class="carousel-item">
-          <img src="images/crabinlove%202.jpg" class="img-fluid d-block w-100" alt="lover">
-        </div>
           <div class="centered">just_crab</div>
       </div>
     </div>
@@ -78,7 +75,7 @@
         <div class="col-7">
           <div id="demobox4"></div>
             <h2> Who Am I?</h2>
-              <img src="file:///Users/harrietMac/Desktop/Coding_Course/group_project/images/wokeuplikethiscrab.jpg" class="image-fluid">
+              <img src="images/wokeuplikethiscrab.jpg" class="image-fluid">
             </div>
             <div class="col-5">
               <p>Some may call me a guru, some may call me a gal. But really I'm just a crab, a London-based crustacean brought to you from the shores of Scarborough Seaworld to provide life hacks to all you lovely lucky people. Positively influencing since '97, this website is a platform where I can share my recommendations, all drawn from my very busy and important life.<p/>
