--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
               <p>Some may call me a guru, some may call me a gal. But really I'm just a crab, a London-based crustacean brought to you from the shores of Scarborough Seaworld to provide life hacks to all you lovely lucky people. Positively influencing since '97, this website is a platform where I can share my recommendations, all drawn from my very busy and important life.<p/>
           </div>
         </div>
+        </div>
   <br>
 <div class="contrast">
 <div class="vl"></div>
