--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <div id="indexcarousel" class="carousel slide" data-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
-            <img src="images/naturalhabitat%202.jpg" class="img-fluid d-block w-100" alt="crab in natural habitat">
+            <img src="images/naturalhabitat2.jpg" class="img-fluid d-block w-100" alt="crab in natural habitat">
         </div>
       <div class="carousel-item">
           <img src="images/angelcrabcopy.jpg" class="img-fluid d-block w-100" alt="angel cap crab">
