claw logo in inbox

--- a/crabdraws.html
+++ b/crabdraws.html
@@ -22,13 +22,12 @@
   </head>
 
   <body>
-
+<div contrast>
     <div class="container">
-      <div id="demobox5"></div>
-      <img src="images/artycrabcrop.jpg" class="img-fluid" alt="Responsive image">
-      <div class="text-block">
+      <img src="images/artycrabcrop.jpg" class="img-fluid imageshadow" alt="Responsive image">
+        <div class="text-block">
           <h3>I Draw Too</h3>
-      </div>
+        </div>
     </div>
 
     <div>
