--- a/crabrecommends.html
+++ b/crabrecommends.html
@@ -18,7 +18,7 @@
 
     As an intensely cultural crab, I feel it is my duty to impart some of my wisdom to you through a few reviews.
 
-    <img src="images/pensivereviewcrab.jpg">
+    <img src="images/pensivereviewcrab.jpg" class="image-fluid imageshadow">
 
   <div class="container-fluid p-0">
       <div class="col-lg-2 col-sm-6">
