--- a/index.html
+++ b/index.html
@@ -17,13 +17,10 @@
   </head>
 
   <body>
-<!-- Navbar still need to add color and spacing utiltiy clasess to css-->
+<!-- Navbar still need to add color and spacing utiltiy clasess to css?-->
 
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar sticky-top navbar-expand-sm navbar-light bg-transparent">
   <a class="navbar-brand" href="index.html"><img src="images/claw.png" height="30" width ="30"></a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
 
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -31,8 +28,11 @@
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
-        <li class="nav-item active">
-          <a class="nav-link" href="#Crab...">Crab...<span class="sr-only">(current)</span></a>
+        <li class="nav-item">
+          <a class="nav-link active" href="home"> <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#About-Crab">Crab...<span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="crabwears.html">Wears</a>
@@ -46,9 +46,11 @@
       </ul>
     </div>
 </nav>
+<div id="home"></div>
+<div id="#About-Crab"></div>
 
-<section id=carousel>
-  <div class="text-overlay">
+
+<section id="my-carousel">
     <div id="indexcarousel" class="carousel slide" data-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
@@ -60,19 +62,19 @@
         <div class="carousel-item">
           <img src="images/hidenseekcrab.jpg" class="img-fluid d-block w-100" alt="hide and seek crab">
         </div>
-          <div class="centered">just_crab</div>
+          <div class="centered text-overlay">just_crab</div>
       </div>
     </div>
-  </div>
     <br>
-  </section>
-<section id=Crab...>
+</section>
+
+<section id=About-Crab>
   <div class="container-fluid">
       <div class="row">
         <div class="col-7">
-          
+
             <h2> Who Am I?</h2>
-              <img src="images/wokeuplikethiscrab.jpg" class="image-fluid test">
+              <img src="images/wokeuplikethiscrab.jpg" class="img-fluid test">
             </div>
             <div class="col-5">
               <p>Some may call me a guru, some may call me a gal. But really I'm just a crab, a London-based crustacean brought to you from the shores of Scarborough Seaworld to provide life hacks to all you lovely lucky people. Positively influencing since '97, this website is a platform where I can share my recommendations, all drawn from my very busy and important life.<p/>
