attempt to add modal

--- a/crabdraws.html
+++ b/crabdraws.html
@@ -31,16 +31,36 @@
     </div>
 
     <div>
-      <p>As I an immensely caring, talented, (and modest) crab, I am most alturistic when it comes to taking the time to give back to my fellow critters, and thanks to my do-good-ing nature, I have pooled my creativity into a series of paintings which will be sold in aid of animals more endangered than myself.
+      <p>As I an immensely caring, talented, (and modest) crab, I am most altrustic when it comes to taking the time to give back to my fellow critters, and thanks to my do-good-ing nature, I have pooled my creativity into a series of paintings which will be sold in aid of animals more endangered than myself.
         (Although, that being said, a crab of my calibre is very rare to find, one might say I am the most endangered on the list...)</p>
     </div>
 
     <br>
     <div>
     <h4>Fancy buying a picture and doing some of your own do-gooding?</h4>
-    <button type="button" class="btn btn-outline-danger">Get in touch!</button>
+    <button type="button" class="btn btn-outline-danger" data-toggle="Get in touch!" data-target="#exampleModal">Get in touch!</button>
     </div>
     <br>
+
+    <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        ...
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Save changes</button>
+      </div>
+    </div>
+  </div>
+</div>
 
 <div class="contrast">
     <section class="p-0" id="portfolio">
@@ -137,8 +157,7 @@
                 </a>
             </div>
 
-
-
+<div>
         <form>
           <div class="form-group">
             <label for="exampleFormControlInput1">Email address</label>
@@ -149,8 +168,8 @@
             <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
           </div>
         </form>
-
-
 </div>
+<script src="https://getbootstrap.com/docs/4.1/dist/js/bootstrap.min.js"></script>
+</body>
 
 </html>
