--- a/crabdraws.html
+++ b/crabdraws.html
@@ -39,33 +39,6 @@
 
     <div>
     <h4>Fancy buying a picture and doing some of your own do-gooding?</h4>
-<<<<<<< HEAD
-    <button type="button" class="btn btn-outline-danger" data-toggle="Get in touch!" data-target="#exampleModal">Get in touch!</button>
-    </div>
-    <br>
-
-    <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Get in touch!</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body">
-        ...
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Save changes</button>
-      </div>
-    </div>
-  </div>
-</div>
-
-<div class="contrast">
-=======
 
     <!-- Button trigger modal -->
     <button type="button" class="btn btn-outline-danger" data-toggle="modal" data-target="#exampleModal">Get in touch!</button>
@@ -94,7 +67,7 @@
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-outline-secondary" data-dismiss="modal">Close</button>
-            <button type="button" class="btn btn-outline-danger">Save changes</button>
+            <button type="button" class="btn btn-outline-danger" data-dismiss="modal">Submit</button>
           </div>
         </div>
       </div>
@@ -103,7 +76,6 @@
     <br>
 
     <div class="contrast">
->>>>>>> 7d36799e46672a5e0e40bc1c0df127608e46f356
     <section class="p-0" id="portfolio">
         <div class="container-fluid p-0">
           <div class="row no-gutters popup-gallery">
@@ -209,9 +181,6 @@
             <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
           </div>
         </form>
-<<<<<<< HEAD
-=======
-
 
         <!-- Optional JavaScript -->
         <!-- jQuery first, then Popper.js, then Bootstrap JS -->
@@ -222,7 +191,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
->>>>>>> 7d36799e46672a5e0e40bc1c0df127608e46f356
 </div>
 <script src="https://getbootstrap.com/docs/4.1/dist/js/bootstrap.min.js"></script>
 </body>
