--- a/crabwears.html
+++ b/crabwears.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 		<link rel="stylesheet" type="text/css" href="css/styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Crab Wears</title>
   </head>
   <body>
@@ -31,7 +32,20 @@ Fila is your cue if you want to get waAvVyYY.
   <div class="col-2">
   </div>
 </div>
-
+<footer>
+               <div class="container">
+                 <div class="row">
+                  <div class="col-lg-10 col-lg-offset-1 text-center">
+                         <br>
+                           <ul class="list-inline social">
+                                   <a href="https://www.facebook.com/codefirstgirls/" target="_blank"><i class="fa fa-facebook fa-fw fa-3x"></i></a>
+                                   <a href="https://twitter.com/CodeFirstGirls" target="_blank"><i class="fa fa-twitter fa-fw fa-3x"></i></a>
+                                  <a href="https://www.linkedin.com/company/code-first-girls/" target="_blank"><i class="fa fa-linkedin fa-fw fa-3x"></i></a>
+                           </ul>
+                       </div>
+                   </div>
+               </div>
+           </footer>
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
