trying to make scroll work

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <!-- Navbar still need to add color and spacing utiltiy clasess to css?-->
 
 <nav class="navbar sticky-top navbar-expand-sm navbar-light bg-transparent">
-  <a class="navbar-brand" href="index.html"><img src="images/claw.png" height="30" width ="30"></a>
+  <a class="navbar-brand" href="index.html"><img src="images/clawlogo.jpg" height="30" width ="30"></a>
 
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
