--- a/crabdraws.html
+++ b/crabdraws.html
@@ -11,38 +11,73 @@
     <!-- CSS stylesheet -->
     <link rel="stylesheet" type="text/css" href="css/styles.css">
 
-    <link href='https://fonts.googleapis.com/css?family=Archivo Black' rel='stylesheet'>
-    <style>
       h3 {
-        font-size: 100px;
-      }
-    </style>
-
     <title>crabdraws</title>
   </head>
 
-  <body>
-<div contrast>
-    <div class="container">
-      <img src="images/artycrabcrop.jpg" class="img-fluid imageshadow" alt="Responsive image">
-        <div class="text-block">
-          <h3>I Draw Too</h3>
+  <div class="modal fade" id="modalContactForm" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
+  aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header text-center">
+        <h4 class="modal-title w-100 font-weight-bold">Write to me</h4>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body mx-3">
+        <div class="md-form mb-5">
+          <i class="fas fa-user prefix grey-text"></i>
+          <input type="text" id="form34" class="form-control validate">
+          <label data-error="wrong" data-success="right" for="form34">Your name</label>
         </div>
-    </div>
 
-    <div>
-      <p>As I an immensely caring, talented, (and modest) crab, I am most alturistic when it comes to taking the time to give back to my fellow critters, and thanks to my do-good-ing nature, I have pooled my creativity into a series of paintings which will be sold in aid of animals more endangered than myself.
+        <div class="md-form mb-5">
+          <i class="fas fa-envelope prefix grey-text"></i>
+          <input type="email" id="form29" class="form-control validate">
+          <label data-error="wrong" data-success="right" for="form29">Your email</label>
+        </div>
+
+        <div class="md-form mb-5">
+          <i class="fas fa-tag prefix grey-text"></i>
+          <input type="text" id="form32" class="form-control validate">
+          <label data-error="wrong" data-success="right" for="form32">Subject</label>
+        </div>
+
+        <div class="md-form">
+          <i class="fas fa-pencil prefix grey-text"></i>
+          <textarea type="text" id="form8" class="md-textarea form-control" rows="4"></textarea>
+          <label data-error="wrong" data-success="right" for="form8">Your message</label>
+        </div>
+
+      </div>
+      <div class="modal-footer d-flex justify-content-center">
+        <button class="btn btn-unique">Send <i class="fas fa-paper-plane-o ml-1"></i></button>
+      </div>
+    </div>
+  </div>
+</div>
+
+    <div contrast>
+      <div class="container">
+        <img src="images/artycrabcrop.jpg" class="img-fluid imageshadow" alt="Responsive image">
+          <div class="text-block">
+            <h3>I Draw Too</h3>
+          </div>
+      </div>
+        <div>
+          <p>As an immensely caring, talented, (and modest) crab, I am most alturistic when it comes to taking the time to give back to my fellow critters, and thanks to my do-good-ing nature, I have pooled my creativity into a series of paintings which will be sold in aid of animals more endangered than myself.
         (Although, that being said, a crab of my calibre is very rare to find, one might say I am the most endangered on the list...)</p>
-    </div>
+      </div>
 
     <br>
     <div>
-    <h4>Fancy buying a picture and doing some of your own do-gooding?</h4>
-    <button type="button" class="btn btn-outline-danger">Get in touch!</button>
+      <h4>Fancy buying a picture and doing some of your own do-gooding?</h4>
+      <button type="button" class="btn btn-outline-danger" data-toggle="modal" data-toggle="modal" data-target="#modalContactForm">Get in touch!</button>
     </div>
     <br>
 
-<div class="contrast">
+<div class="container-fluid">
     <section class="p-0" id="portfolio">
         <div class="container-fluid p-0">
           <div class="row no-gutters popup-gallery">
@@ -136,21 +171,11 @@
                   </div>
                 </a>
             </div>
-
-
-
-        <form>
-          <div class="form-group">
-            <label for="exampleFormControlInput1">Email address</label>
-            <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
           </div>
-          <div class="form-group">
-            <label for="exampleFormControlTextarea1">What you sayin</label>
-            <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-          </div>
-        </form>
+        </div>
 
 
+</div>
 </div>
 
 </html>
