cleaning up codes

--- a/crabdraws.html
+++ b/crabdraws.html
@@ -35,8 +35,6 @@
         (Although, that being said, a crab of my calibre is very rare to find, one might say I am the most endangered on the list...)</p>
     </div>
 
-    <br>
-
     <div>
     <h4>Fancy buying a picture and doing some of your own do-gooding?</h4>
 
@@ -54,6 +52,8 @@
             </button>
           </div>
           <div class="modal-body">
+
+          <!--Form placed here-->
             <form>
               <div class="form-group">
                 <label for="exampleFormControlInput1">Email address</label>
@@ -64,6 +64,7 @@
                 <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
               </div>
             </form>
+
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-outline-secondary" data-dismiss="modal">Close</button>
@@ -73,6 +74,7 @@
       </div>
       </div>
     </div>
+
     <br>
 
     <div class="contrast">
@@ -93,22 +95,22 @@
                   </div>
                 </div>
               </a>
-    </div>
-            <div class="col-lg-4 col-sm-6">
-              <a class="portfolio-box" href="images/orang2.jpg">
-                  <img class="img-fluid" src="images/orang2.jpg" alt="">
-                  <div class="portfolio-box-caption">
-                    <div class="portfolio-box-caption-content">
-                      <div class="project-category text-faded">
-                        Fuck yeah I'm an Orangutang
-                      </div>
-                      <div class="project-name">
-                        This one is from Borneo as well innit
-                      </div>
+      </div>
+      <div class="col-lg-4 col-sm-6">
+          <a class="portfolio-box" href="images/orang2.jpg">
+              <img class="img-fluid" src="images/orang2.jpg" alt="">
+                <div class="portfolio-box-caption">
+                  <div class="portfolio-box-caption-content">
+                    <div class="project-category text-faded">
+                      Fuck yeah I'm an Orangutang
                     </div>
-                  </div>
-                </a>
-            </div>
+                    <div class="project-name">
+                      This one is from Borneo as well innit
+                    </div>
+                </div>
+              </div>
+            </a>
+        </div>
             <div class="col-lg-4 col-sm-6">
               <a class="portfolio-box" href="images/giraffe1.jpg">
                   <img class="img-fluid" src="images/giraffe1.jpg" alt="">
@@ -169,20 +171,6 @@
                   </div>
                 </a>
             </div>
-
-
-
-        <form>
-          <div class="form-group">
-            <label for="exampleFormControlInput1">Email address</label>
-            <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
-          </div>
-          <div class="form-group">
-            <label for="exampleFormControlTextarea1">What you sayin</label>
-            <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-          </div>
-        </form>
-
 
         <!-- Optional JavaScript -->
         <!-- jQuery first, then Popper.js, then Bootstrap JS -->
