--- a/crabwears.html
+++ b/crabwears.html
@@ -38,9 +38,9 @@ Fila is your cue if you want to get waAvVyYY.
                   <div class="col-lg-10 col-lg-offset-1 text-center">
                          <br>
                            <ul class="list-inline social">
-                                   <a href="https://www.facebook.com/codefirstgirls/" target="_blank"><i class="fa fa-facebook fa-fw fa-3x"></i></a>
+                                   <a href="https://www.facebook.com/codefirstgirls/" target="_blank"><i class="fa fa-instagram fa-fw fa-3x"></i></a>
                                    <a href="https://twitter.com/CodeFirstGirls" target="_blank"><i class="fa fa-twitter fa-fw fa-3x"></i></a>
-                                  <a href="https://www.linkedin.com/company/code-first-girls/" target="_blank"><i class="fa fa-linkedin fa-fw fa-3x"></i></a>
+                                  <a href="https://www.linkedin.com/company/code-first-girls/" target="_blank"><i class="fa fa-facebook fa-fw fa-3x"></i></a>
                            </ul>
                        </div>
                    </div>
