crabdraws model working!
fixed it

--- a/crabrecommends.html
+++ b/crabrecommends.html
@@ -13,6 +13,7 @@
 
     <title>crabrecommends</title>
   </head>
+
   <body>
     <h1>I recommend</h1>
 
@@ -312,3 +313,4 @@
             </a>
         </div>
       </div>
+</html>
