--- a/crabdraws.html
+++ b/crabdraws.html
@@ -1,6 +1,7 @@
-<!doctype html>
-<html>
+<!DOCTYPE html>
+<html lang="en">
   <head>
+
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -13,55 +14,7 @@
 
     <title>crabdraws</title>
   </head>
-  <div class="modal fade" id="modalContactForm" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
-  aria-hidden="true">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header text-center">
-        <h4 class="modal-title w-100 font-weight-bold">Write to me</h4>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body mx-3">
-        <div class="md-form mb-5">
-          <i class="fas fa-user prefix grey-text"></i>
-          <input type="text" id="form34" class="form-control validate">
-          <label data-error="wrong" data-success="right" for="form34">Your name</label>
-        </div>
-
-        <div class="md-form mb-5">
-          <i class="fas fa-envelope prefix grey-text"></i>
-          <input type="email" id="form29" class="form-control validate">
-          <label data-error="wrong" data-success="right" for="form29">Your email</label>
-        </div>
-
-        <div class="md-form mb-5">
-          <i class="fas fa-tag prefix grey-text"></i>
-          <input type="text" id="form32" class="form-control validate">
-          <label data-error="wrong" data-success="right" for="form32">Subject</label>
   <body>
-    <div contrast>
-    <div class="container">
-      <img src="images/artycrabcrop.jpg" class="img-fluid imageshadow" alt="Responsive image">
-        <div class="text-block">
-          <h3>I Draw Too</h3>
-        </div>
-
-        <div class="md-form">
-          <i class="fas fa-pencil prefix grey-text"></i>
-          <textarea type="text" id="form8" class="md-textarea form-control" rows="4"></textarea>
-          <label data-error="wrong" data-success="right" for="form8">Your message</label>
-        </div>
-
-      </div>
-      <div class="modal-footer d-flex justify-content-center">
-        <button class="btn btn-unique">Send <i class="fas fa-paper-plane-o ml-1"></i></button>
-      </div>
-    </div>
-  </div>
-</div>
-
     <div contrast>
       <div class="container">
         <img src="images/artycrabcrop.jpg" class="img-fluid imageshadow" alt="Responsive image">
@@ -75,12 +28,6 @@
       <p>As I an immensely caring, talented, (and modest) crab, I am most altrustic when it comes to taking the time to give back to my fellow critters, and thanks to my do-good-ing nature, I have pooled my creativity into a series of paintings which will be sold in aid of animals more endangered than myself.
         (Although, that being said, a crab of my calibre is very rare to find, one might say I am the most endangered on the list...)</p>
       </div>
-
-    <div>
-      <h4>Fancy buying a picture and doing some of your own do-gooding?</h4>
-      <button type="button" class="btn btn-outline-danger" data-toggle="modal" data-toggle="modal" data-target="#modalContactForm">Get in touch!</button>
-    </div>
-    <br>
 
 <div class="container-fluid">
     <h4>Fancy buying a picture and doing some of your own do-gooding?</h4>
@@ -218,7 +165,7 @@
                   </div>
                 </a>
             </div>
-<div>
+        <div>
         <form>
           <div class="form-group">
             <label for="exampleFormControlInput1">Email address</label>
