--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 </section>
 
 <section id=About-Crab>
-  <div class="contrast">
+  <div class="contrast2">
     <div class="container-fluid">
       <div class="row">
         <div class="col-7">
